--- a/package.json
+++ b/package.json
@@ -100,34 +100,34 @@
     ]
   },
   "devDependencies": {
-    "@semantic-release/git": "^7.0.17",
-    "@types/jest": "^24.0.19",
-    "@types/node": "^12.12.4",
-    "@types/ramda": "0.26.36",
-    "@typescript-eslint/eslint-plugin": "^2.11.0",
-    "@typescript-eslint/parser": "^2.11.0",
+    "@semantic-release/git": "^9.0.0",
+    "@types/jest": "25.1.3",
+    "@types/node": "^13.7.4",
+    "@types/ramda": "0.26.41",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.5.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "fs-jetpack": "^2.2.3",
-    "gluegun": "^4.0.2",
-    "jest": "^24.9.0",
+    "gluegun": "^4.1.2",
+    "jest": "^25.1.0",
     "npm-run-all": "4.1.5",
-    "prettier": "1.18.2",
-    "semantic-release": "^15.13.28",
-    "sinon": "^7.5.0",
-    "tempy": "^0.3.0",
-    "ts-jest": "^24.1.0",
-    "typescript": "^3.6.4"
+    "prettier": "1.19.1",
+    "semantic-release": "^17.0.4",
+    "sinon": "^9.0.0",
+    "tempy": "^0.4.0",
+    "ts-jest": "^25.2.1",
+    "typescript": "3.8.2"
   },
   "dependencies": {
-    "ramda": "^0.26.1",
-    "read-pkg-up": "^7.0.0"
+    "ramda": "0.27.0",
+    "read-pkg-up": "^7.0.1"
   },
   "jest": {
     "testPathIgnorePatterns": [
